build the landing page and the movies search form

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,8 @@
-<p>landing works!</p>
+<main class="container landing-display">
+  <div>
+    <h1>Explore Netflix Mini</h1>
+    <p class="landing-text">All your favourite movies and series at your fingertips</p>
+    <p class="landing-text">Browse through our library containing thousands of movies and series from across the globe</p>
+    <a role="button" [routerLink]="['/movies']" class="btn btn-danger btn-lg landing-btn">Explore</a>
+  </div>
+</main>
