--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" [routerLink]="['/']">
       <img src="https://fontmeme.com/permalink/191014/d457ecaf6c9433a0de1227a473d31137.png" alt="Netflix Mini Logo">
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed" aria-controls="navbarSupportedContent" [attr.aria-expanded]="!isCollapsed" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav mr-5 ml-auto">
         <li class="nav-item mr-5">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" [routerLink]="['/movies']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
         </li>
         <li class="nav-item mr-5">
           <a class="nav-link" href="#">Favorites</a>
