--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -11,4 +11,19 @@
       </div>
     </div>
   </form>
+  <div *ngIf="isLoadingMovies" class="spinner-border text-light" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="row">
+    <div *ngFor="let movie of movies" class="col-md-4 col-sm-6 col-xs-12 my-3">
+      <a class="card-link" [routerLink]="['/movies', movie.imdbID]">
+        <div class="card bg-secondary">
+          <img class="card-img-top" src="{{ movie.Poster }}" alt="{{ movie.Title }} Poster">
+          <div class="card-body">
+            <h6 class="card-title">{{ movie.Title }} ({{ movie.Year }})</h6>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 </main>
