fix bugs in movies component

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,6 +1,6 @@
 <main class="container">
   <h1>Search Movies and Series</h1>
-  <form #searchForm="ngForm" (ngSubmit)="search(searchForm.value.searchTerm)" novalidate>
+  <form #searchForm="ngForm" (ngSubmit)="search()" novalidate>
     <div class="form-group row">
       <label class="sr-only" for="searchTerm">Search Term</label>
       <div class="col-md-10 col-sm-8 col-xs-6 my-2">
