--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,17 +1,6 @@
 <main class="container">
   <h1>Favorites</h1>
   <div class="row">
-      <div *ngFor="let movie of movies" class="col-md-4 col-sm-6 col-xs-12 my-3">
-        <div class="card bg-secondary">
-          <img class="card-img-top" [src]="movie.Poster" [alt]="movie.Title">
-          <div class="card-body">
-            <h6 class="card-title">{{ movie.Title }} ({{ movie.Year }})</h6>
-            <br>
-            <a class="card-link" [routerLink]="['/movies', movie.imdbID]">
-              <button class="btn btn-block btn-danger">View</button>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-movie-card class="col-md-4 col-sm-6 col-xs-12 my-3" *ngFor="let movie of movies" [movie]="movie" [star]="false"></app-movie-card>
+  </div>
 </main>
