--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" [routerLink]="['/movies']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
         </li>
         <li class="nav-item mr-5">
-          <a class="nav-link" [routerLink]="['/movies/favorites']">Favorites</a>
+          <a class="nav-link" [routerLink]="['/movies/favorites']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Favorites</a>
         </li>
       </ul>
     </div>
